fix spacing for sections

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,6 +80,10 @@ main {
                 font-weight: 900;
                 margin: 3% 0;
             }
+
+            p {
+                margin: 6% 0;
+            }
         }
     }
 
@@ -106,6 +110,10 @@ main {
                 font-size: 2.5rem;
                 font-weight: 900;
                 margin: 3% 0;
+            }
+
+            p {
+                margin: 6% 0;
             }
         }
     }
